{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Controls",
            "id": "2eab690e-80fb-42c3-969c-245b980e5dce",
            "actions": [
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "77dabda8-a613-42c2-be46-cbf72c701443",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "0528a512-8cd9-41c1-8b50-5369a0130818",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "4dc8976a-f0ba-45b7-8c91-2acec457d120",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "5412308d-d9a8-44ca-a5c1-319d06b43805",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0964d421-67c9-4548-9ca1-33c705cd240e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14ad90b0-3f37-40d5-ab31-dd1e601148db",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d66ca04-5e42-4cd0-9af1-f4f8f0a4302f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff78d8dc-84b8-43e5-a34d-343de6bd441d",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f571f0ae-26bb-4d71-9ab8-34cc2f7f863d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7f7da18-28e5-4d78-add7-c9f12f3c0d94",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f4922f9-8c8e-4bed-a454-f888c22959ce",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f514871-23bc-4c48-b252-d8d6e5608e0f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "54c2184c-9999-49ce-abb9-5b6920cce5ca",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "07b2c44d-426a-48aa-8f8c-67de8045d64f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LowerVolume",
                    "type": "Button",
                    "id": "bfcee2c5-62f8-4118-a5ee-0f1910eb6228",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RaiseVolume",
                    "type": "Button",
                    "id": "186fb035-8267-481e-8d2a-f02b0b63a4a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed7aa189-63ff-4390-8790-9bafa2a9181a",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0885074f-9f85-47fb-80b3-9f66483601a4",
                    "path": "<Keyboard>/minus",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "LowerVolume",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffc90438-7a75-48a0-86ec-7c7bd13a494b",
                    "path": "<Keyboard>/equals",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "KeyboardInput",
                    "action": "RaiseVolume",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyboardInput",
            "bindingGroup": "KeyboardInput",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}